@@ -2,6 +2,9 @@
 changes in sbcl-1.0.6 relative to sbcl-1.0.5:
   * bug fix: GETHASH, (SETF GETHASH), CLRHASH and REMHASH are now
     interrupt safe.
+  * bug fix: GC race condition occasionally resulting in crashes with
+    the error message "SIG_STOP_FOR_GC blocked at a bad place" has been
+    fixed.
 
 changes in sbcl-1.0.5 relative to sbcl-1.0.4:
   * incompatible change: removed writer methods for host-ent-name,
